@@ -751,7 +751,12 @@ int skill_get_casttype (int id)
 //Returns actual skill range taking into account attack range and AC_OWL [Skotlex]
 int skill_get_range2 (struct block_list *bl, int id, int lv)
 {
-	int range = skill_get_range(id, lv);
+	int range;
+	if(bl->type == BL_MOB && !(battle_config.mob_ai&0x400))
+		return 9; //Mobs have a range of 9 regardless of skill used.
+
+	range = skill_get_range(id, lv);
+
 	if(range < 0) {
 		if (battle_config.use_weapon_skill_range&bl->type)
 			return status_get_range(bl);
